@startuml


class InventoryTracker{
    start()
    main()
}

class WindowManager{
    scenes: Map<String, Scene> Scenes

    load()
    getScene(String) Scene

}

class MainWindowController{

    items: InventoryTrackerModel
    scenes: WindowManager
    fileManager: FileManager

    initialize()
    + MainWindowController(InventoryTrackerModel, WindowManager)
    + addItemButtonClicked(ActionEvent event)
    + loadButtonClicked(ActionEvent event)
    + quitButtonClicked(ActionEvent event)
    + removeItemButtonClicked(ActionEvent event)
    + saveFileButtonClicked(ActionEvent event)

}

class FileManager{

    + saveAsCSV(fileName: String, data: ObservableSet)
    + saveAsHTML(fileName: String, data: ObservableSet)
    + saveAsJSON(fileName: String, data: ObservableSet)

    + loadFromCSV(fileName: String) ObservableSet
    + loadFromHTML(fileName: String) ObservableSet
    + loadFromJSON(fileName: String) ObservableSet

}

class AddItemController{

    addButtonClicked(EventHandler)

}

class InventoryTrackerModel{

    items: ObservableSet<Item>

    + findName(name: String) Item
    + findSerialNumber(serialNumber: String) Item
    + addItem(name: String, serialNumber: String, value: Double)
    + removeItem(Item)
    + editValue(item: Item, value: Double)
    + editSerialNumber(item: Item, serialNumber: String)
    + editName(item: Item, name: String)
    + sortName()
    + sortSerialNumber()
    + sortValue()


}

class Item{

    name: SimpleStringProperty
    serialNumber: SimpleStringProperty
    value: SimpleDoubleProperty

    Item(String name, String serialNumber, Double value)

    + getName()
    + getSerialNumber()
    + getValue()

    + setName()
    + setSerialNumber()
    + setValue()

}



javafx.application <-- InventoryTracker
InventoryTracker *-- WindowManager
WindowManager o-- MainWindowController
WindowManager o-- AddItemController

AddItemController o-- InventoryTrackerModel
MainWindowController o-- InventoryTrackerModel
MainWindowController o-- FileManager
InventoryTrackerModel *-- Item


@enduml